# Atto-Host

./: .gitignore  README.md  app.js  authenticate.js  config.js  docker-compose.yml  file-management.js  package-lock.json  package.json  pyproject.toml  startup.sh
backend/: Dockerfile  alembic.ini  app.py  config.json  database.py  entrypoint.sh  get_configuration.py  limiter.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b0161c7f37b_init.py
backend/app/: app.py  database.py  get_configuration.py
backend/app/models/: models.py
backend/app/routers/: files.py  users.py
backend/app/schema/: user.py
backend/models/: models.py
backend/routers/: files.py  users.py
backend/test/: conftest.py  test_files.py
backend/test/configs/: config_low_filesize_limit.json
backend/test/test_content/: Dockerfile  test_script.bat
backend/test/test_files/: test_download_file.py  test_files.md  test_files.py  test_list_files.py  test_remove_all_files.py  test_remove_file.py  test_upload_file.py  test_view_file.py
backend/test/test_packages/test_cleanup/: test_get_orphaned_files.py  test_remove_expired_files.py  test_remove_orphaned_files copy.py  tests.md
backend/test/test_packages/test_storage_driver/: test_storage_driver.py  tests.md
backend/test/test_packages/test_tokens/: test_generate_jwt.py  test_get_current_user.py  test_get_secret_key.py  tests.md
backend/test/test_users/: test_login.py  test_register.py  test_users.md
backend/tests/: conftest.py  test_files.py
models/: file.js  user.js
public/: filepage.html  index.html
public/stylesheets/: filesheet.css  style.css
routes/: files.js  upload.js  users.js
views/: layout.jade
